# rust_http_tunnel

./: Cargo.toml  README.md
src/: codec.rs  dns.rs  main.rs
